<resources>
    <string name="app_name">Edulive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_courses">My Courses</string>
    <string name="title_activity_announce">Announcements</string>
    <string name="title_activity_files">Course Files</string>
    <string name="title_activity_polls">Course Polls</string>
    <string name="title_activity_polls_results">Polls Results</string>
    <string name="title_activity_polls_vote">Polls Vote</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_chart">Poll Chart Results</string>
    <!-- Strings related to login -->
    <string name="prompt_email">* Email</string>
    <string name="prompt_password">* Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--CUSTOM STRINGS-->
    <!--192.168.137.1-->
    <string name="base_url_local">http://192.168.137.1/cyborg/edulive/</string>
    <string name="base_url">https://www.businessphix.com/edulive/</string>
    <string name="font_family">fonts/AvenirLTStd-Book.otf</string>
    <string name="app_slogan">...learning with convenience</string>
    <string name="prompt_firstname">* First Name</string>
    <string name="prompt_lastname">* Last Name</string>
    <string name="prompt_phone">Phone Number (optional)</string>
    <string name="action_submit_short">Submit</string>
    <string name="error_not_equal_password">Passwords do not match</string>
    <string name="action_refresh">No connection. Tap to refresh</string>
    <string name="no_records">Sorry, no records was found</string>
    <string name="action_privacy_policy">Henry Nnonyelu Project . 2019</string>

    <string name="chart">Show Chart</string>
</resources>
