<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:iconTint="@color/colorWhite"
        app:showAsAction="always"
        android:actionLayout="@layout/menu_counter"
        android:icon="@drawable/rounded_square"
        />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="101"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>

<!--
<menu
    xmlns:android="schemas.android.com/apk/res/android"
    xmlns:appcompat="schemas.android.com/apk/res-auto" >
        <item android:id="@+id/badge"
            android:actionLayout="@layout/feed_update_count"
            android:icon="@drawable/shape_notification"
            appcompat:showAsAction="always" />
        </item>
    </menu>
-->